--- a/test/index.html
+++ b/test/index.html
@@ -3,16 +3,25 @@
   <head>
     <meta charset="utf-8">
     <title>Mocha Tests</title>
-    <link rel="stylesheet" href="../node_modules/mocha/mocha.css" />
+    <link rel="stylesheet" href="https://cdn.rawgit.com/mochajs/mocha/2.2.5/mocha.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pouchdb/5.1.0/pouchdb.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/chai/3.4.1/chai.min.js"></script>
     <script src="./bind-polyfill.js"></script>
-    <script src="../node_modules/mocha/mocha.js"></script>
+    <script src="../summadoc.js"></script>
+    <script src="../dist/pouchdb.summa.js"></script>
+    <script src="https://cdn.rawgit.com/mochajs/mocha/2.2.5/mocha.js"></script>
     <script>
     mocha.setup('bdd');
     </script>
-    <script src="./test-bundle.js"></script>
   </head>
   <body>
     <div id="mocha"></div>
-    <script type="text/javascript" src="./webrunner.js"></script>
+
+    <script>mocha.setup('bdd')</script>
+    <script src="./test.js"></script>
+    <script>
+      mocha.checkLeaks();
+      mocha.run();
+    </script>
   </body>
 </html>
