--- a/test/index.html
+++ b/test/index.html
@@ -7,7 +7,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pouchdb/5.1.0/pouchdb.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/chai/3.4.1/chai.min.js"></script>
     <script src="./bind-polyfill.js"></script>
-    <script src="../summadoc.js"></script>
+    <script src="https://cdn.rawgit.com/nolanlawson/transform-pouch/v1.0.2/dist/pouchdb.transform-pouch.min.js"></script>
     <script src="../dist/pouchdb.summa.js"></script>
     <script src="https://cdn.rawgit.com/mochajs/mocha/2.2.5/mocha.js"></script>
     <script>
